Aggiornate dipendenze, GestoreAste
Aggiunte delle dipendenze al progetto, continuata implementazione del creaAste di GestoreAste.